tests/single_instruction_translation_validation/mcsema/register-variants/vpackuswb_ymm_ymm_ymm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:560:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 32, i8* nonnull %11) #22
            ^
0.01user 0.01system 0:00.03elapsed 103%CPU (0avgtext+0avgdata 27720maxresident)k
0inputs+16outputs (0major+3261minor)pagefaults 0swaps
